--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -29,8 +29,8 @@ law@cygnus.com</a>.  Yes, we realize it's a public key, but there's no sense
 
 <p>Once we have this information we will set up an account on egcs.cygnus.com
 and send you mail notifying you that the account is ready.  At this point you
-should be able to "slogin egcs.cygnus.com".  We recommend doing this once to
-verify that ssh is up and functioning correctly.
+should be able to check out a tree with CVS and add yourself to the MAINTAINERS
+file to test write access.
 
 
 <h2>Setting up your local CVS tree</h2>
@@ -85,7 +85,7 @@ your changes back in they will automatically be checked out into the
 web server's data area.
 
 <hr>
-<i>Last modified on August 07, 1998.</i>
+<i>Last modified on September 18, 1998.</i>
 
 <hr>
 <a href="/">Return to the egcs home page</a>
