--- a/htdocs/install/finalinstall.html
+++ b/htdocs/install/finalinstall.html
@@ -15,16 +15,18 @@
 be found in <i>prefix</i>/bin where <i>prefix</i> is the value you specified
 with the --prefix to configure (or /usr/local by default).
 
-<p>If you don't mind, please send egcs@cygnus.com a short mail message
-indicating that you successfully built and installed egcs.  Include
-the output from running <i>srcdir</i>/config.guess.
+<p>If you don't mind, please quickly review the
+<a href="../egcs-1.1/buildstat.html"> build status page.</a> 
+If your system is not listed, send a note to <a href="mailto:egcs@cygnus.com"> 
+egcs@cygnus.com</a> indicating that you successfully built and installed egcs.  Include the output from running <i>srcdir</i>/config.guess.  Do not send us the
+config.guess file!
 
 <p>If you find a bug in egcs, please report it to
 <a href="mailto:egcs-bugs@cygnus.com">egcs-bugs@cygnus.com</a>.
 
 <p>
 <hr>
-<i>Last modified on May 15, 1998.</i>
+<i>Last modified on September 19, 1998.</i>
 
 </body>
 </html>
