Add mirror in Moscow.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -46,6 +46,7 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <li>Finland: <a href="ftp://ftp.funet.fi/mirrors/ftp.cygnus.com/pub/egcs">ftp.funet.fi</a>
 <li>Canada: <a href="ftp://ftp.crc.ca/pub/packages/egcs">ftp.crc.ca</a>
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs">ftp.nc.orc.ru</a>
+<li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs">linux.ihep.su</a>
 </ul>
 
 <p>These sites are mirroring <tt>ftp.goof.com</tt>'s site, so we get to mooch
@@ -68,7 +69,7 @@ where the mirror is located.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on September 3, 1998.</i>
+<i>Last modified on September 19, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
