--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -5,6 +5,9 @@
 <body>
 <h1 align="center">Build and Test status for egcs-1.1</h1>
 
+<p><b>alpha-dec-osf3.2</b><br>
+Successful
+
 <p><b>alphaev56-dec-osf4.0d</b><br>
 Successful
 
