--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -29,6 +29,9 @@ Successful
 <p><b>hppa1.1-hp-hpux10.20</b><br>
 Successful
 
+<p><b>i386-unknown-openbsd2.3</b><br>
+Had to hack gcc/configure.in.  Troubles with texinfo, but a successful build
+was eventually possible.
 <p><b>i586-unknown-linux-gnulibc1</b><br>
 Successful
 
