--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -103,9 +103,12 @@ egcs.  A partial list of supported <tt>options</tt>:
   thread support library.  This only effects the Objective-C compiler  and
   runtime library.
 
-  <li> <tt>--with-cpu=</tt><i>cpu</i> -- Specify which cpu variant the compiler should
-  generate code for by default.  This is currently only supported on the
-  RS6000/PowerPC ports.
+  <li> <tt>--with-cpu=</tt><i>cpu</i> -- Specify which cpu variant the
+  compiler should generate code for by default.  This is currently
+  only supported on the some ports, specifically arm, powerpc, and
+  sparc. If configure does not recognize the model name (e.g. arm700,
+  603e, or ultrasparc) you provide, please check the configure script
+  for a complete list of supported models.
 
   <li> <tt>--enable-target-optspace</tt> -- Specify that target libraries should  be optimzied for code space instead of code speed.  This is the default for
   the m32r platform.
