- RMS says that changing employers only requires new disclaim.future form   NOT new assign.future form. - Improve some HTML formatting.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -1,10 +1,8 @@
 <html>
 <head>
-<title> Contributing Code</title>
+<title>Contributing Code</title>
 </head>
 <body>
-
-
 <h2><a name="contributing-code">CONTRIBUTING CODE</a></h2>
 
 <dl>
@@ -12,7 +10,7 @@
   <dt><b>Coding Standards:</b></dt>
 
   <dd>All contributions must conform to the <a
-  href="http://www.gnu.ai.mit.edu/prep/standards_toc.html"> GNU Coding
+  href="http://www.gnu.ai.mit.edu/prep/standards_toc.html">GNU Coding
   Standards</a>.  Submissions which do not conform to the standards will
   be returned with a request to reformat the changes.<p>
   </dd>
@@ -37,8 +35,9 @@
    (including gcc, g++, g77, Objective C, libstdc++, etc.),
    it will be easiest if you can fill out this form, called <a
    href="fsf-forms/assign.future">assign.future</a>.  Please note that
-   you'll need to fill out the assign.future form again if you switch
-   employers.
+   if you switch employers, the new employer will need to fill out the
+   <a href=fsf-forms/disclaim.future>disclaim.future</a> form; there is
+   no need to fill out the assign.future form again.
 
    <li>There are several <a href="fsf-forms/copyrights.html">other forms
    you can fill out</a> for different circumstances (e.g. to contribute
@@ -48,12 +47,10 @@
    <li>Small changes can be accepted without a copyright assignment form
    on file.
 
-  <li>This is pretty confusing!  If you are unsure of what is necessary,
-  just ask
-   the <tt>egcs</tt> mailing list and we'll figure out what is best
+   <li>This is pretty confusing!  If you are unsure of what is necessary,
+   just ask the <tt>egcs</tt> mailing list and we'll figure out what is best
    for you.
-
- </ul>
+  </ul>
 
   <p>Note:  Many of these forms have a place for "name of program".
   Insert the name of <b>one</b> program in that place, "gcc", "g77",
@@ -92,7 +89,7 @@
 </dl>
 
 <hr>
-<i>Last modified on May 29, 1998.</i>
+<i>Last modified on September 24, 1998.</i>
 
 <hr>
 <a href="">Return to the egcs home page</a>
