- Fix some more HTML formatting mistakes for spacing of items. - Use &quot; not " in text.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -6,7 +6,6 @@
 <h2><a name="contributing-code">CONTRIBUTING CODE</a></h2>
 
 <dl>
-  
   <dt><b>Coding Standards:</b></dt>
 
   <dd>All contributions must conform to the <a
@@ -14,7 +13,6 @@
   Standards</a>.  Submissions which do not conform to the standards will
   be returned with a request to reformat the changes.<p>
   </dd>
-
 
   <dt><b>Copyright Assignment:</b></dt>
 
@@ -52,13 +50,13 @@
    for you.
   </ul>
 
-  <p>Note:  Many of these forms have a place for "name of program".
-  Insert the name of <b>one</b> program in that place, "gcc", "g77",
-  "libstdc++", etc.  Do <b>not</b> write "egcs" in that location.  If
-  you use "egcs" or multiple program names, the FSF will reject the
-  assignment and we won't be able to use your contribution.
+  <br>Note:  Many of these forms have a place for &quot;name of program&quot;.
+  Insert the name of <b>one</b> program in that place, &quot;gcc&quot;,
+  &quot;g77&quot;, &quot;libstdc++&quot;, etc.  Do <b>not</b> write
+  &quot;egcs&quot; in that location.  If you use &quot;egcs&quot; or multiple
+  program names, the FSF will reject the assignment and we won't be able to
+  use your contribution.<p>
   </dd>
-
 
   <dt><b>Submitting Patches:</b></dt>
 
@@ -73,18 +71,17 @@
        Note that, unlike some other projects, we do require ChangeLogs
        also for documentation (i.e., .texi files).
   <li> The patch itself.  If you are accessing the <a href="cvs.html">
-       CVS repository</a> at Cygnus, use "cvs update; cvs diff -c3p"; else use
-       "diff -c3p OLD NEW" or "diff -up OLD NEW".  If your
-       version of diff does not support these options, then get the
+       CVS repository</a> at Cygnus, use &quot;cvs update; cvs diff -c3p&quot;;
+       else, use &quot;diff -c3p OLD NEW&quot; or &quot;diff -up OLD NEW&quot;.
+       If your version of diff does not support these options, then get the
        latest version of GNU diff.
   </ul>
 
-  When you have all these pieces, bundle them up in a mail message and
-  send it to <a href="mailto:egcs-patches@cygnus.com">egcs-patches@cygnus.com</a>.
-
-  Note all patches and related discussion should be send to the egcs-patches
-  list.
-
+  <br>When you have all these pieces, bundle them up in a mail message and
+  send it to
+  <a href="mailto:egcs-patches@cygnus.com">egcs-patches@cygnus.com</a>.
+  All patches and related discussion should be sent to the egcs-patches
+  mailinglist.
   </dd>
 </dl>
 
