--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -426,7 +426,7 @@ EGCS, then you are on your own.  The 2.0.xx kernels are to be built only
 with gcc-2.7.2.  They use certain asm constructs which are incorrect, but
 (by accident) happen to work with gcc-2.7.2.  If you insist on building
 2.0.xx kernels with egcs, you may be interested in this 
-<a href=http://www.suse.de/~florian/kernel+egcs.html> patch </a> which
+<a href="http://www.suse.de/~florian/kernel+egcs.html">patch</a> which
 fixes some (all?) of the asm problems.
 
 <p>If you installed a recent binutils/gas snapshot on your Linux system,
