--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -8,6 +8,9 @@
 <p><b>alpha-dec-osf3.2</b><br>
 Successful
 
+<p><b>alphaev56-dec-osf4.0b</b><br>
+Successful
+
 <p><b>alphaev56-dec-osf4.0d</b><br>
 Successful
 
@@ -27,6 +30,9 @@ Successful
 Successful
 
 <p><b>hppa1.1-hp-hpux10.20</b><br>
+Successful
+
+<p><b>i386-pc-solaris2.6</b><br>
 Successful
 
 <p><b>i386-unknown-openbsd2.3</b><br>
@@ -71,7 +77,10 @@ Successful
 <p><b>mips-sgi-irix6.5</b><br>
 Successful
 
-<p><b>powperpc-unknown-linux-gnulibc1</b> <br>
+<p><b>powerpc-unknown-linux-gnulibc1</b> <br>
+Successful
+
+<p><b>rs6000-ibm-aix3.2</b> <br>
 Successful
 
 <p><b>rs6000-ibm-aix4.1.4.0</b> <br>
