an alternative to building gas with same --prefix as gcc

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -271,7 +271,7 @@ available.
 
 <hr>
 <h2><a name="mips">Problems building on MIPS platforms</a></h2>
-<p>EGCS requires the use of GAS on all versions of Irix, except Irix 6 due
+<p>EGCS requires the use of GAS on all versions of Irix, except Irix 6, due
 to limitations in older Irix assemblers.
 
 <p> Either of these messages indicates that you are using the MIPS assembler
@@ -291,8 +291,8 @@ when instead you should be using GAS.
 </pre>
 
 
-<p>For Irix 6, you should use the native assembler as GAS is not supported
-on Irix 6.
+<p>For Irix 6, you should use the native assembler as GAS is not yet
+supported on this platform.
 
 <hr>
 <h2><a name="x86eh">Problems with exception handling on x86 platforms</a></h2>
@@ -474,6 +474,11 @@ assembler instead of the system assembler.  To ensure that EGCS finds the GNU
 assembler, you should configure the GNU assembler with the same --prefix
 option as you used for EGCS.  Then build & install the GNU assembler.  After
 the GNU assembler has been installed, proceed with building EGCS.
+
+<p>Another alternative is to create links to GNU as and ld in any of
+the directories printed by the command `<tt>gcc -print-search-dirs |
+grep '^programs:'</tt>'.  The link to `<tt>ld</tt>' should be named
+`<tt>real-ld</tt>' if `<tt>ld</tt>' already exists.
 
 <hr>
 <h2><a name="rh5.0">EGCS does not work on Red Hat 5.0</a></h2>
