--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -33,6 +33,37 @@ OpenServer-specific flags.
 tell you what you're running) require TLS597 from ftp.sco.com/TLS for
 C++ constructors and destructors to work right.
 
+<p><b>i?86-*-udk</b><br> 
+
+This target emulates the SCO Universal Development Kit and requires that
+package be installed.  It's very much like the i?86-*-unixware7 target
+but is meant to be used when hosting on a system where UDK isn't the
+default compiler such as OpenServer 5 or Unixware 2.  This target will
+generate binaries that will run on OpenServer, Unixware 2, or Unixware 7, 
+with the same warnings and caveats as the SCO UDK.
+
+<p>You can stage1 with either your native compiler or with UDK.   If you
+don't do a full bootstrap when initially building with your native compiler
+you will have an utterly unusable pile of bits as your reward.
+
+<p>This target is a little tricky to build because we have to distinguish
+it from the native tools (so it gets headers, startups, and libraries
+from the right place) while making the tools not think we're actually 
+building a cross compiler.   The easiest way to do this is with a configure
+command like this:
+
+<p>
+<code>
+BLAH BLAH BLAH FINISH THIS
+	CC=/udk/usr/ccs/bin/cc CFLAGS=-O /play/egcs/configure --host=i686-pc-udk --target=i686-pc-udk --exec-prefix=udk-
+</code>
+
+<p> You should follow this with a 'make bootstrap'.  After you do a
+'make install' you can then access the UDK-targeted EGCS tools by adding
+'udk-' before the commonly known name.  For example, to invoke the C
+compiler, you would use 'udk-gcc'.  They will coexist peacefully with
+any native-target EGCS tools you may have installed.
+
 <p><b>i?86-pc-solaris*</b><br>
 For versions of egcs before 1.0.1 you'll need a special
 <a href="http://egcs.cygnus.com/faq.html#x86solaris">x86 solaris patch</a>
