--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -95,6 +95,9 @@ Successful
 <p><b>rs6000-ibm-aix4.2.1.0</b> <br>
 Successful
 
+<p><b>sparc-sun-solaris2.3</b> <br>
+Successful
+
 <p><b>sparc-sun-solaris2.5</b> <br>
 Successful
 
@@ -110,7 +113,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on September 18, 1998.</i>
+<i>Last modified on October 1, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
