- Tweak HTML. - Note Haifa update and software pipelining / branch optimizations. - Add documentation for IBM optimizations.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -8,37 +8,44 @@
 <h2>NEWS</h2>
 
 <dl>
+<dt><b>September 22, 1998</b></dt>
+<dd>
+  <a href="http://www.ibm.com/">IBM Corporation</a> delivers an update to the
+IBM Haifa <a href="scheduler.ps"><b>instruction scheduler</b></a> and
+new <a href="pipelining.ps"><b>software pipelining and branch
+optimization</b></a> support.
+</dd>
 <dt><b>September 18, 1998</b></dt>
 <dd>
   Michael Hayes donates <a href="/cgi-bin/cvsweb/gcc/README.C4X?rev=1.1">
-  c4x port. </a>
+  <b>c4x port.</b></a>
 <dt><b>September 6, 1998</b></dt>
 <dd>
-  <a href="http://www.cygnus.com"> Cygnus </a> donates <a href="http://sourceware.cygnus.com/java/gcj-announce.txt"> <b>Java front end</b></a>.
+  <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="http://sourceware.cygnus.com/java/gcj-announce.txt"><b>Java front end</b></a>.
 </dd>
 <dt><b>September 3, 1998</b></dt>
 <dd>
-  <a href="egcs-1.1/egcs-1.1.html"> <b>egcs-1.1 is released</b></a>.
+  <a href="egcs-1.1/egcs-1.1.html"><b>egcs-1.1 is released</b></a>.
 </dd>
 <dt><b>August 29, 1998</b></dt>
 <dd>
-  <a href="http://www.cygnus.com"> Cygnus </a> donates <a href="chill.html"> <b>Chill front end and runtime</b></a>.
+  <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="chill.html"><b>Chill front end and runtime</b></a>.
 </dd>
 <dt><b>August 25, 1998</b></dt>
 <dd>
-  <a href="sparc.html"> <b>David Miller donates rewritten sparc backend</b></a>.
+  David Miller donates rewritten <a href="sparc.html"><b>sparc backend</b></a>.
 </dd>
 <dt><b>August 19, 1998</b></dt>
 <dd>
-  <a href="hoist.html"> <b>Mark Mitchell donates load hoisting and store
-  sinking support</b></a>.
+  Mark Mitchell donates <a href="hoist.html"><b>load hoisting and store
+  sinking</b></a> support.
 </dd>
 <dt><b>July 15, 1998</b></dt>
 <dd>The first snapshot of the rewritten <tt>libstdc++</tt> is available.
 You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
 <dt><b>June 29, 1998</b></dt>
 <dd>
-  <a href="alias.html"> <b>Mark Mitchell donates alias analysis framework</b></a>.
+  Mark Mitchell donates <a href="alias.html"><b>alias analysis framework</b></a>.
 </dd>
 <dt><b>May 26, 1998</b></dt>
 <dd>
@@ -54,15 +61,15 @@ You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
   not get lost in the large volume of the main mailing list.
 <dt><b>May 18, 1998</b></dt>
 <dd>
-  <a href="http://www.cygnus.com"> Cygnus </a> donates <a href="gcse.html"> <b>gcse optimization pass</b></a>.
+  <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="gcse.html"><b>gcse optimization pass</b></a>.
 </dd>
 <dt><b>May 15, 1998</b></dt>
 <dd>
-  <a href="egcs-1.0/egcs-1.0.3.html"> <b>egcs-1.0.3 released!</b></a>.
+  <a href="egcs-1.0/egcs-1.0.3.html"><b>egcs-1.0.3 released!</b></a>.
 </dd>
 <dt><b>March 18, 1998</b></dt>
 <dd>
-  <a href="egcs-1.0/egcs-1.0.2.html"> <b>egcs-1.0.2 released!</b></a>.
+  <a href="egcs-1.0/egcs-1.0.2.html"><b>egcs-1.0.2 released!</b></a>.
 </dd>
 <dt><b>February 26, 1998</b></dt>
 <dd>
@@ -80,15 +87,15 @@ You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
 </dd>
 <dt><b>January 12, 1998</b></dt>
 <dd>
-  <a href="cvs.html"> <b>Remote access to CVS sources is available!</b></a>.
+  <a href="cvs.html"><b>Remote access to CVS sources is available!</b></a>.
 </dd>
 <dt><b>January 6, 1998</b></dt>
 <dd>
-  <a href="egcs-1.0/egcs-1.0.1.html"> <b>egcs-1.0.1 released!</b></a>.
+  <a href="egcs-1.0/egcs-1.0.1.html"><b>egcs-1.0.1 released!</b></a>.
 </dd>
 <dt><b>December 3, 1997</b></dt>
 <dd>
-  <a href="egcs-1.0/egcs-1.0.html"> <b>egcs-1.0 released!</b></a>.
+  <a href="egcs-1.0/egcs-1.0.html"><b>egcs-1.0 released!</b></a>.
 </dd>
 <dt><b>August 15, 1997</b></dt>
 <dd>
@@ -101,7 +108,7 @@ You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on September 18, 1998.</i>
+<i>Last modified on October 6, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
