--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -74,6 +74,9 @@ Successful
 <p><b>mips-sgi-irix6.3</b><br>
 Successful
 
+<p><b>mips-sgi-irix6.4</b><br>
+Successful
+
 <p><b>mips-sgi-irix6.5</b><br>
 Successful
 
@@ -113,7 +116,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on October 1, 1998.</i>
+<i>Last modified on October 14, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
