Revamped entry about GNU as, putting more emphasis on GNU ld (especially in the title of the FAQ entry).

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -25,7 +25,7 @@
   <li><a href="#snapshot">Snapshots, how, when, why</a>
   <li><a href="#linuxkernel">Problems building Linux kernels</a>
   <li><a href="#memexhausted">Virtual memory exhausted</a>
-  <li><a href="#gas">GCC can not find GAS</a>
+  <li><a href="#gas">GCC can not find GNU as/GNU ld</a>
   <li><a href="#rh5.0">EGCS does not work on Red Hat 5.0</a>
   <li><a href="#x86solaris">Unable to bootstrap on x86 Solaris2.{5,6}</a>
   <li><a href="#windows">EGCS with Windows</a>
@@ -468,12 +468,12 @@ STL.  Also note that -Wall includes -Wreturn-type, so if you use -Wall you
 will need to specify -Wno-return-type to turn it off.
 
 <hr>
-<h2><a name="gas">GCC can not find GAS</a></h2>
+<h2><a name="gas">GCC can not find GNU as/GNU ld</a></h2>
 <p>Some configurations like irix4, irix5, hpux* require the use of the GNU
-assembler instead of the system assembler.  To ensure that EGCS finds the GNU
-assembler, you should configure the GNU assembler with the same --prefix
-option as you used for EGCS.  Then build & install the GNU assembler.  After
-the GNU assembler has been installed, proceed with building EGCS.
+assembler instead of the system assembler. To ensure that EGCS finds the GNU
+assembler (the GNU loader), you should configure these with the same --prefix
+option as you used for EGCS.  Then build & install GNU as (GNU ld) and
+proceed with building EGCS.
 
 <p>Another alternative is to create links to GNU as and ld in any of
 the directories printed by the command `<tt>gcc -print-search-dirs |
