--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -42,6 +42,11 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <li>Japan: <a href="ftp://ftp.win.or.jp/pub/lang/egcs">ftp.win.or.jp</a>
 <li>Japan: <a href="ftp://ftp.telewaynet.ad.jp/pub/lang/egcs">ftp.telewaynet.ad.jp</a>
 <li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs">ftp.lab.kdd.co.jp</a>
+<li>Japan (Ibaraki): <a href="ftp://ring.aist.go.jp/pub/lang/egcs">ring.aist.go.jp</a>
+<li>Japan (Tokyo): <a href="ftp://ring.asahi-net.or.jp/pub/lang/egcs">ring.asahi-net.or.jp</a>
+<li>Japan (Tokoy): <a href="ftp://ring.so-net.ne.jp/pub/lang/egcs">ring.so-net.ne.jp</a>
+<li>Japan (Tokyo): <a href="ftp://ring.nacsis.ac.jp/pub/lang/egcs">ring.nacsis.ac.jp</a>
+
 <LI>Taejon, Korea: <A HREF="ftp://cair-archive.kaist.ac.kr/pub/gnu/egcs">cair-archive.kaist.ac.kr</a>, thanks to <a href="mailto:ahmls@nmsvr.chosun.com">Ho-sun Lee</a>!
 <li>Finland: <a href="ftp://ftp.funet.fi/mirrors/ftp.cygnus.com/pub/egcs">ftp.funet.fi</a>
 <li>Canada: <a href="ftp://ftp.crc.ca/pub/packages/egcs">ftp.crc.ca</a>
@@ -69,7 +74,7 @@ where the mirror is located.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on September 19, 1998.</i>
+<i>Last modified on October 22, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
