Add list of well-known bugs.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -197,6 +197,9 @@ manual can be read using `<i>M-x <tt>info</tt></i>' in Emacs, or if the GNU
 Or see the file <a href="/cgi-bin/cvsweb/gcc/BUGS?rev=1.1">BUGS</a> included
 with the egcs source code.
 
+<p>Before you report a bug for the C++ compiler, you might check the
+<a href="c++bugs.html">list of well-known bugs</a>.
+
 <p>In short, if egcs says <tt>Internal compiler error</tt>, mail a bug report
 to <a href="mailto:egcs-bugs@cygnus.com">egcs-bugs@cygnus.com</a> including:
 
