--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -54,6 +54,7 @@
   <li><a href="#irixlinks">Links to other FAQs for GCC on Irix platforms?</a>
   <li><a href="#squangle">How to work around too long C++ symbol names? 
 	 (<tt>-fsquangle</tt>)</a>
+  <li><a href="#multipletests">How can I run the test suite with multiple options?</a>
 </ol>
 
 <hr>
@@ -873,9 +874,26 @@ have to rebuild them all again. :-(
 initialized by default), then rebuilding egcs and any C++ libraries.
 
 <hr>
+<h2><a name="multipletests"> How can I run the test suite with multiple options? </a></h2>
+
+<p>If you invoke <code>runtest</code> directly, you can use the
+<code>--target_board</code> option, e.g:
+<pre>
+  runtest --target_board "unix{-fPIC,-fpic,}" &lt;other options&gt;
+</pre>
+Or, if you use <code>make check</code> you can use the
+<code>make</code> variable <code>RUNTESTFLAGS</code>, e.g:
+<pre>
+  make RUNTESTFLAGS='--target_board "unix{-fPIC,-fpic,}"' check-gcc
+</pre>
+<p>Either of these examples will run the tests three times.   Once 
+with <code>-fPIC</code>, once with <code>-fpic</code>, and once with 
+no additional flags.
+<p>This technique is particularly useful on multilibbed targets.
+<hr>
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  September 28, 1998</i>
+<p><i>Last modified:  October 25, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
