new mirror in australia.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -61,7 +61,8 @@ off of them.  Thanks to Marc Lehmann for mentioning this!
 <LI><A HREF="ftp://ftp.goof.com/pub/pcg/egcs/">US: Goof.COM</A>, thanks to <A HREF="http://www.goof.com/~mmead">Matthew C. Mead</A>!
 <LI><A HREF="ftp://ftp.u-aizu.ac.jp/pub/lang/C/pcg/egcs/">JAPAN: ftp.u-aizu.ac.jp (Aizu University)</A>, thanks to <A HREF="mailto:takafumi@u-aizu.ac.jp">Takafumi Hayashi</A>!
 <LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!
-<LI><A HREF="ftp://ftp.maisel.int-evry.fr/pub/linux/pentium/egcs/">FRANCE: ftp.minet.net (MINET)</A>, thanks to <A HREF="http://www-eleves.int-evry.fr/~tharan">Olivier Tharan</A>!
+<LI><A HREF="ftp://ftp.maisel.int-evry.fr/pub/linux/pentium/egcs/">FRANCE: ftp.maisel.int-evry.fr</A>, thanks to <A HREF="http://www-eleves.int-evry.fr/~tharan">Olivier Tharan</A>!
+<LI><A HREF="ftp://mirror.aarnet.edu.au/pub/egcs/">Australia: mirror.aarnet.edu.au </A>, thanks to Jason Andrade!
 </UL>
 
 <p>If you wish to host a new mirror site, please contact
