--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -147,9 +147,9 @@ a working egcs. It is strongly recommended to recompile binutils with egcs
 if you initially built it with gcc-2.7.2.*.
 
 <p><b>sparc-unkonwn-linux-gnulibc1</b><br>
-It has been reported that you might need binutils-2.8.1.0.23 for this
-platform too.
+It has been reported that you might need 
 <a href="ftp://ftp.yggdrasil.com/private/hjl">binutils-2.8.1.0.23</a>
+for this platform too.
 
 <hr>
 <i>Last modified on October 27, 1998.</i>
