Make it a little easier to find the legal paperwork and style guidelines.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -84,14 +84,17 @@ numerous folks.  We have compiled a <a href="thanks.html"> partial list of
 contributors.</a>
 
 <hr>
+<h2><a name="contributions">CONTRIBUTIONS</a></h2>
 <p>We encourage contributions of code, bugfixes, new optimizations, new
-features, documentation updates, web page improvements, etc.  Look
-<a href="contribute.html">here</a> for information about contributing
-to the egcs project.
+features, documentation updates, web page improvements, etc.
+
+There are certain 
+<a href="contribute.html"> legal requirements and style issues </a>
+which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on August 22, 1998.</i>
+<i>Last modified on October 27, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
