Page for local spilling code.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -8,6 +8,11 @@
 <h2>NEWS</h2>
 
 <dl>
+<dt><b>October 27, 1998</b></dt>
+<dd>
+Bernd Schmidt donates <a href="spill.html"> localized spilling support </a> to
+egcs.
+</dd>
 <dt><b>September 22, 1998</b></dt>
 <dd>
   <a href="http://www.ibm.com/">IBM Corporation</a> delivers an update to the
@@ -108,7 +113,7 @@ You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on October 6, 1998.</i>
+<i>Last modified on October 28, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
