Incorporate new EGCS logo, change page colors accordingly.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -2,8 +2,12 @@
 <head>
 <title>egcs project home page</title>
 </head>
-<body>
+
+<body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
+
 <h1 align="center">egcs project home page</h1>
+
+<img src="logo.jpg" align="right">
 
 Welcome to the egcs project!
 
