Tweak GNU as/GNU ld entry, adding link to platform specific configuration.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -472,11 +472,11 @@ will need to specify -Wno-return-type to turn it off.
 
 <hr>
 <h2><a name="gas">GCC can not find GNU as/GNU ld</a></h2>
-<p>Some configurations like irix4, irix5, hpux* require the use of the GNU
-assembler instead of the system assembler. To ensure that EGCS finds the GNU
-assembler (the GNU loader), you should configure these with the same --prefix
-option as you used for EGCS.  Then build & install GNU as (GNU ld) and
-proceed with building EGCS.
+<p>To ensure that EGCS finds the GNU assembler (the GNU loader), which
+are required by <a href="install/specific.html">some configurations</A>,
+you should configure these with the same --prefix option as you used
+for EGCS.  Then build & install GNU as (GNU ld) and proceed with
+building EGCS.
 
 <p>Another alternative is to create links to GNU as and ld in any of
 the directories printed by the command `<tt>gcc -print-search-dirs |
@@ -855,7 +855,7 @@ shipped with AIX 4.3.2.
 
 <hr>
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  October 27, 1998</i>
+<p><i>Last modified:  October 28, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
