Use more generic URL for cross-gcc FAQ.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -373,7 +373,7 @@ dejagnu snapshot</a> available until a new version of dejagnu can be released.
 usually need additional software (cross assembler, cross linker, target
 libraries, target include files, etc).
 
-<p>We recommend reading the <a href="ftp://ftp.cygnus.com/pub/embedded/crossgcc/FAQ-0.8.1">
+<p>We recommend reading the <a href="ftp://ftp.cygnus.com/pub/embedded/crossgcc/FAQ">
 crossgcc FAQ</a> for information about building cross compilers.
 
 <p>If you have all the pieces available, then `make cross' should build a
