--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -45,7 +45,7 @@ roughly 40% of disk space both for the bootstrap and the final installation.
 <p><b>Building a cross compiler</b>
 
 <p> We recommend reading the
-<a href="ftp://ftp.cygnus.com/pub/embedded/crossgcc/FAQ-0.8.1">
+<a href="ftp://ftp.cygnus.com/pub/embedded/crossgcc/FAQ">
 crossgcc FAQ</a> for information about building cross compilers.
 
 <p>For a cross build, issue the command "make cross", which performs the
