--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -200,8 +200,10 @@ with the egcs source code.
 <p>Before you report a bug for the C++ compiler, you might check the
 <a href="c++bugs.html">list of well-known bugs</a>.
 
-<p>In short, if egcs says <tt>Internal compiler error</tt>, mail a bug report
-to <a href="mailto:egcs-bugs@cygnus.com">egcs-bugs@cygnus.com</a> including:
+<p>In short, if egcs says <tt>Internal compiler error</tt> (or any
+other error that you'd like us to be able to reproduce, for that
+matter), please mail a bug report to <a
+href="mailto:egcs-bugs@cygnus.com">egcs-bugs@cygnus.com</a> including:
 
 <ul>
   <li>The egcs version
@@ -482,6 +484,15 @@ building EGCS.
 the directories printed by the command `<tt>gcc -print-search-dirs |
 grep '^programs:'</tt>'.  The link to `<tt>ld</tt>' should be named
 `<tt>real-ld</tt>' if `<tt>ld</tt>' already exists.
+
+<p>Post-1.1 snapshots of egcs allow you to specify the full pathname
+of the assembler and the linker to use.  The configure flags are
+`<tt>--with-as=/path/to/as</tt>' and `<tt>--with-ld=/path/to/ld</tt>'.
+EGCS will try to use these pathnames before looking for `<tt>as</tt>'
+or `<tt>(real-)ld</tt>' in the standard search dirs.  If, at
+configure-time, the specified programs are found to be GNU utilities,
+`<tt>--with-gnu-as</tt>' and `<tt>--with-gnu-ld</tt>' need not be
+used; these flags will be auto-detected.
 
 <hr>
 <h2><a name="windows">EGCS with Windows</a></h2>
@@ -855,7 +866,7 @@ shipped with AIX 4.3.2.
 
 <hr>
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  October 28, 1998</i>
+<p><i>Last modified:  October 30, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
