--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -143,6 +143,7 @@ small fixes.
   <li> Nathan Sidwell
   <li> Andrey Slepuhin for assorted AIX hacking.
   <li> Scott Snyder for variou fixes.
+  <li> Richard Stallman, for writing the original gcc and launching the GNU project.
   <li> Nigel Stephens for various mips16 related fixes/improvements.
   <li> Mike Stump for his g++ contributions over the years and more recently
   his vxworks contributions.
