Propagate recent updates of contrib/egcs_update to "Generated Files" entry.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -617,10 +617,12 @@ touch `find egcs/texinfo -name \*.pot -print`
 touch `find egcs/texinfo -name \*.gmo -print`
 touch egcs/gcc/{c-parse.y,cstamp-h.in,c-gperf.h,c-parse.c,c-parse.h,cexp.c}
 touch egcs/gcc/cp/parse.{c,h}
-touch egcs/gcc/java/parse.{c,h}
+touch egcs/gcc/java/{parse.c,parse.h,parse-scan.c}
 touch egcs/gcc/objc/objc-parse.{c,y}
 touch egcs/libf2c/libU77/config.hin
 touch egcs/libf2c/libU77/stamp-h.in
+touch egcs/contrib/fixinc/{fixincl.x,inclhack.sh,fixincl.sh}
+touch egcs/gcc/fixinc/{fixincl.x,inclhack.sh,fixincl.sh}
 </pre>
 
 <hr>
@@ -866,7 +868,7 @@ shipped with AIX 4.3.2.
 
 <hr>
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  October 30, 1998</i>
+<p><i>Last modified:  October 31, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
