--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -15,6 +15,7 @@
   <li><a href="#fortran">Problems building the Fortran compiler</a>
   <li><a href="#mips">Problems building on MIPS platforms</a>
   <li><a href="#x86eh">Problems with exception handling on x86 platforms</a>
+  <li><a href="#asmclobber">Problems with <tt>Invalid `asm' statement</tt>s</a>
   <li><a href="#hpcompare">Bootstrap comparison failures on HPs</a>
   <li><a href="#makebugs">Bootstrap loops rebuilding cc1 over and over</a>
   <li><a href="#rpath">Dynamic linker is unable to find GCC libraries</a>
@@ -314,6 +315,83 @@ Or, you can try a
 and may not work (or even build).  Use it at your own risk.
 
 <hr>
+<h2><a name="asmclobber">Problems with invalid `asm' statements</a></h2>
+<p>Previous releases of gcc (for example, gcc-2.7.2.<i>X</i>) did not
+detect as invalid a clobber specifier that clobbered an operand.
+Instead, it could spuriously and silently generate incorrect code for
+certain non-obvious cases of source code.  Even more unfortunately, the
+manual (Using and Porting GCC, section Extended Asm, see the
+<a href="#bugreport"> bug report entry</a>) did not explicitly say that it
+was invalid to specify clobber registers that were destined to overlap
+operands; it could arguably be interpreted that it was correct to clobber
+an input operand to mark it as not holding a usable value after the asm.
+
+<p>For the general case, there is no way to tell whether a specified
+clobber is <i>intended</i> to overlap with a specific (input) operand or
+is a program error, where the choice of actual register for operands
+failed to <i>avoid</i> the clobbered register.  Such unavoidable overlap
+is now detected (with latest unreleased egcs sources in CVS), and flagged
+as an error rather than accepted.  An error message is given, such as:
+<pre>
+foo.c: In function `foo':
+foo.c:7: Invalid `asm' statement:
+foo.c:7: fixed or forbidden register 0 (ax) was spilled for class AREG.
+</pre>
+Unfortunately, a lot of existing software, for example the
+<a href="#linuxkernel">Linux kernel</a> version 2.0.35 for the Intel x86,
+has constructs where input operands are marked as clobbered.
+
+<p>The manual now describes how to write constructs with operands that
+are modified by the construct, but not actually used.  To write an asm
+which modifies an input operand but does not output anything usable,
+specify that operand as an <b>output operand</b> outputting to an
+<b>unused dummy variable</b>.
+
+<p>In the following example for the x86 architecture (taken from the Linux
+2.0.35 kernel -- <tt>include/asm-i386/delay.h</tt>), the register-class
+constraint <tt>"a"</tt> denotes a register class containing the single
+register <tt>"ax"</tt> (aka. <tt>"eax"</tt>).  It is therefore invalid
+to clobber <tt>"ax"</tt>; this operand has to be specified as an output
+as well as an input.  The following code is therefore <b>invalid</b>:
+<pre>
+extern __inline__ void
+__delay (int loops)
+{
+  __asm__ __volatile__
+    (".align 2,0x90\n1:\tdecl %0\n\tjns 1b"
+     : /* no outputs */
+     : "a" (loops)
+     : "ax");
+}
+</pre>
+It could be argued that since the register class for <tt>"a"</tt> contains
+only a single register, this could be detected as an "obvious" intended
+clobber of the input operand.  While that is feasible, it opens up for
+further "obvious" cases, where the level of obviousness changes from
+person to person.  As there is a correct way to write such asm constructs,
+this obviousness-detection is not needed other than for reasons of
+compatibility with an existing code-base, and that code base can be
+corrected.
+<p>
+This corrected and clobber-less version, is <b>valid</b> for egcs of
+current CVS, as well as for previous versions of gcc:
+<pre>
+extern __inline__ void
+__delay (int loops)
+{
+  int dummy;
+
+  __asm__ __volatile__
+    (".align 2,0x90\n1:\tdecl %0\n\tjns 1b"
+     : "=a" (dummy)
+     : "0" (loops));
+}
+</pre>
+Note that the asm construct now has an output operand, but it is unused.
+Normally asm constructs with only unused output operands may be removed by
+gcc, unless marked <tt>volatile</tt> as above.
+
+<hr>
 <h2><a name="hpcompare">Bootstrap comparison failures on HPs</a></h2>
 <p>If you bootstrap the compiler on hpux10 using the HP assembler instead of
 gas, every file will fail the comparison test.
@@ -434,7 +512,8 @@ with gcc-2.7.2.  They use certain asm constructs which are incorrect, but
 (by accident) happen to work with gcc-2.7.2.  If you insist on building
 2.0.xx kernels with egcs, you may be interested in this 
 <a href="http://www.suse.de/~florian/kernel+egcs.html">patch</a> which
-fixes some (all?) of the asm problems.
+fixes some of the asm problems.  You will also want to change asm constructs
+to <a href="#asmclobber">avoid clobbering their input operands</a>.
 
 <p>If you installed a recent binutils/gas snapshot on your Linux system,
 you may not be able to build the kernel because objdump does not understand
@@ -868,7 +947,7 @@ shipped with AIX 4.3.2.
 
 <hr>
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  October 31, 1998</i>
+<p><i>Last modified:  November  4, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
