Refer to specific versions instead of ``current CVS''.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -330,7 +330,7 @@ an input operand to mark it as not holding a usable value after the asm.
 clobber is <i>intended</i> to overlap with a specific (input) operand or
 is a program error, where the choice of actual register for operands
 failed to <i>avoid</i> the clobbered register.  Such unavoidable overlap
-is now detected (with latest unreleased egcs sources in CVS), and flagged
+is detected by versions egcs-2.92.18 19981104 and above, and flagged
 as an error rather than accepted.  An error message is given, such as:
 <pre>
 foo.c: In function `foo':
