Update entry for GNU Pascal, which does work with egcs-1.1.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -745,8 +745,11 @@ to egcs/gcc/ada.
 
 <hr>
 <h2><a name="gpc">Using EGCS with GNU Pascal</a></h2>
-<p>The <a href="http://home.pages.de/~GNU-Pascal"> GNU Pascal </a>
-front-end is not currently supported by EGCS.
+<p>The <a href="http://home.pages.de/~GNU-Pascal/">GNU Pascal</a>
+front-end does work with egcs-1.1 It does not work with egcs-1.0.x and
+the main branch as of egcs-2.92.18. A tarball can be found at
+<A HREF="ftp://agnes.dida.physik.uni-essen.de/gnu-pascal/beta/">
+ftp://agnes.dida.physik.uni-essen.de/gnu-pascal/beta/</A>.
 
 <hr>
 <h2><a name="cvssnapshots">Using CVS to download snapshots</a></h2>
