Development versions of some GNU tools may be needed if one modifies sources. Based on a message by Marc Espie <Marc.Espie@liafa.jussieu.fr>.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -704,6 +704,14 @@ touch egcs/contrib/fixinc/{fixincl.x,inclhack.sh,fixincl.sh}
 touch egcs/gcc/fixinc/{fixincl.x,inclhack.sh,fixincl.sh}
 </pre>
 
+<p>If you modified some sources, you may need to obtain some
+development versions of some GNU tools, as the production versions do
+not necessarily handle all features needed to rebuild egcs. Have a
+look at
+<A HREF="ftp://egcs.cygnus.com/pub/egcs/infrastructure/">
+ftp://egcs.cygnus.com/pub/egcs/infrastructure/</a>.
+</p>
+
 <hr>
 <h2><a name="aixas">Assembler error on AIX 4.3.0</a></h2>
 <p>The initial assembler shipped with AIX 4.3.0 generates incorrect object
