We do not want messages in HTML, RTF and similiar formats sent to the lists.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -34,6 +34,7 @@ with an open subscription and post policy.
 </ul>
   
 <p>To post a message, just send mail to <i>listname</i><tt>@cygnus.com</tt>.
+Please refrain from sending messages in HTML, RTF or similiar formats.
 
 <p>When posting messages, please select an appropriate list for the message
 and try to avoid cross posting a message to several lists.
@@ -80,7 +81,7 @@ future.
 
 <hr>
 <a name="glimpsebox"></a>
-<p><i>Last modified:  July 17, 1998</i>
+<p><i>Last modified:  November  8, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
