Move recent news entries from news.html to index.html and cross-link both pages. Minor additional tweaks.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -32,10 +32,33 @@ href="egcs-1.1/egcs-1.1.html"> egcs-1.1</a> is the current release.
 
 <p>egcs is pronounced "eggs", the c is silent.
 <hr>
+
+
 <h2>NEWS/ANNOUNCEMENTS</h2>
 
-<p>Want to know what's new with egcs?  Then check out the 
-<a href="news.html"> news and announcements page.</a>
+<dl>
+<dt><b>November 5, 1998</b></dt>
+<dd>The third snapshot of the rewritten <tt>libstdc++</tt> is available.
+You can read some more on <a href="http://sourceware.cygnus.com/libstdc++/">
+http://sourceware.cygnus.com</a>.
+</dd>
+
+<dt><b>October 27, 1998</b></dt>
+<dd>
+Bernd Schmidt donates <a href="spill.html"> localized spilling support </a>.
+</dd>
+
+<dt><b>September 22, 1998</b></dt>
+<dd>
+<a href="http://www.ibm.com/">IBM Corporation</a> delivers an update
+to the IBM Haifa <a href="scheduler.ps">instruction scheduler</a> and
+new <a href="pipelining.ps">software pipelining and branch
+optimization</a> support.
+</dd>
+</dl>
+
+<a href="news.html">Further news...</a>
+
 
 <h2>FAQ</h2>
 
@@ -98,7 +121,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on October 27, 1998.</i>
+<i>Last modified on November 10, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
