Add news item about the announcement of the egcs steering committee.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -37,6 +37,11 @@ href="egcs-1.1/egcs-1.1.html"> egcs-1.1</a> is the current release.
 <h2>NEWS/ANNOUNCEMENTS</h2>
 
 <dl>
+<dt><b>November 10, 1998</b></dt>
+<dd>An official steering committee has been formed. Here is the
+<a href="steering.html">original announcement</a>.
+</dd>
+
 <dt><b>November 5, 1998</b></dt>
 <dd>The third snapshot of the rewritten <tt>libstdc++</tt> is available.
 You can read some more on <a href="http://sourceware.cygnus.com/libstdc++/">
