Add links to further (C/C++ specific) FAQs.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -5,6 +5,15 @@
 <body>
 <h1 align="center">EGCS Frequently Asked Questions</h1>
 
+<p>This FAQ tries to answer specific questions concerning EGCS. For
+general information regarding C resp. C++, please check the 
+<a href="http://www.eskimo.com/~scs/C-faq/top.html">comp.lang.c FAQ</a>,
+<a href="http://www.cerfnet.com/~mpcline/On-Line-C++-FAQs/">
+comp.lang.c++ FAQ</a>, and the 
+<a href="http://reality.sgi.com/employees/austern_mti/std-c++/faq.html">
+comp.std.c++ FAQ</a>.
+
+<hr>
 <ol>
   <li><a href="#gcc-2-diff">How is EGCS different from gcc2?</a>
   <li><a href="#open-development">What is an open development model?</a>
@@ -957,8 +966,9 @@ using the original "small format".  A correct version of the routines is
 shipped with AIX 4.3.2.
 
 <hr>
+
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  November  4, 1998</i>
+<p><i>Last modified:  November 18, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
