Tweak explanation regarding generated files. Based on a patch by Bret McGuire <mersault@busboy.sped.ukans.edu>.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -695,7 +695,7 @@ to build EGCS.
 bison, and xgettext.
 
 <p>This is necessary because neither diff nor cvs keep timestamps
-correct.  This causes problems for generates files as "make" may think
+correct.  This causes problems for generated files as "make" may think
 those generated files are out of date and try to regenerate them.
 
 <pre>
@@ -713,10 +713,10 @@ touch egcs/contrib/fixinc/{fixincl.x,inclhack.sh,fixincl.sh}
 touch egcs/gcc/fixinc/{fixincl.x,inclhack.sh,fixincl.sh}
 </pre>
 
-<p>If you modified some sources, you may need to obtain some
-development versions of some GNU tools, as the production versions do
-not necessarily handle all features needed to rebuild egcs. Have a
-look at
+<p>When building from diffs or CVS or if you modified some sources,
+you may also need to obtain development versions of some GNU tools, as
+the production versions do not necessarily handle all features needed
+to rebuild egcs. Have a look at
 <A HREF="ftp://egcs.cygnus.com/pub/egcs/infrastructure/">
 ftp://egcs.cygnus.com/pub/egcs/infrastructure/</a>.
 </p>
@@ -968,7 +968,7 @@ shipped with AIX 4.3.2.
 <hr>
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  November 18, 1998</i>
+<p><i>Last modified:  November 20, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
