Add link to new autoconf homepage.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -716,9 +716,13 @@ touch egcs/gcc/fixinc/{fixincl.x,inclhack.sh,fixincl.sh}
 <p>When building from diffs or CVS or if you modified some sources,
 you may also need to obtain development versions of some GNU tools, as
 the production versions do not necessarily handle all features needed
-to rebuild egcs. Have a look at
-<A HREF="ftp://egcs.cygnus.com/pub/egcs/infrastructure/">
-ftp://egcs.cygnus.com/pub/egcs/infrastructure/</a>.
+to rebuild egcs.</p>
+
+<p>Autoconf is available from
+<a href="http://sourceware.cygnus.com/autoconf/">
+http://sourceware.cygnus.com/autoconf/</a>; have a look at
+<a name="ftp://egcs.cygnus.com/pub/egcs/infrastructure/">
+ftp://egcs.cygnus.com/pub/egcs/infrastructure/</a> for the other packages.
 </p>
 
 <hr>
