--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -110,13 +110,16 @@ Successful
 <p><b>sparc-sun-solaris2.6</b> <br>
 Successful
 
+<p><b>sparc-sun-solaris2.7</b> <br>
+Successful
+
 <p><b>sparc-sun-sunos4.1.4</b> <br>
 Successful
 
 
 <hr>
 <p>
-<i>Last modified on October 14, 1998.</i>
+<i>Last modified on November 21, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
