Add sh4 news entry.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -37,6 +37,12 @@ href="egcs-1.1/egcs-1.1.html"> egcs-1.1</a> is the current release.
 <h2>NEWS/ANNOUNCEMENTS</h2>
 
 <dl>
+<dt><b>November 21, 1998</b></dt>
+<dd>
+<a href="http://www.cygnus.com/">Cygnus</a> donates support for the SH4
+processor.
+</dd>
+
 <dt><b>November 10, 1998</b></dt>
 <dd>An official steering committee has been formed. Here is the
 <a href="steering.html">original announcement</a>.
@@ -126,7 +132,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on November 10, 1998.</i>
+<i>Last modified on November 21, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
